--- a/signature-app/package.json
+++ b/signature-app/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.26.2",
     "react-signature-canvas": "^1.0.6",
     "styled-components": "^6.1.13",
+    "uuid": "^10.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
