--- a/signature-app/package.json
+++ b/signature-app/package.json
@@ -10,16 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
     "axios": "^1.7.7",
     "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-excel-renderer": "^1.1.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
     "react-signature-canvas": "^1.0.6",
     "styled-components": "^6.1.13",
     "uuid": "^10.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xlsx-style": "^0.8.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
